[gd_scene load_steps=19 format=3 uid="uid://c6b2ubg1jxku0"]

[ext_resource type="Texture2D" uid="uid://ct81l526dvdfa" path="res://Textures/slime_green.png" id="1_4wgff"]
[ext_resource type="Script" uid="uid://dg3saiv8rvwuc" path="res://boss_slime.gd" id="1_ddthx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p8al1"]
atlas = ExtResource("1_4wgff")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk783"]
atlas = ExtResource("1_4wgff")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8egaj"]
atlas = ExtResource("1_4wgff")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_s85si"]
atlas = ExtResource("1_4wgff")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3j4s"]
atlas = ExtResource("1_4wgff")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6we72"]
atlas = ExtResource("1_4wgff")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjm25"]
atlas = ExtResource("1_4wgff")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3k5r"]
atlas = ExtResource("1_4wgff")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ni4a"]
atlas = ExtResource("1_4wgff")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ss82"]
atlas = ExtResource("1_4wgff")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku8n6"]
atlas = ExtResource("1_4wgff")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca1u4"]
atlas = ExtResource("1_4wgff")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddthx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8al1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk783")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8egaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s85si")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3j4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6we72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjm25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3k5r")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ni4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ss82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku8n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca1u4")
}],
"loop": false,
"name": &"spawn",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvqoo"]
radius = 991.94

[sub_resource type="CircleShape2D" id="CircleShape2D_apmrc"]
radius = 52.0096

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fwqr1"]
size = Vector2(123.25, 109.438)

[node name="boss_slime" type="CharacterBody2D"]
script = ExtResource("1_ddthx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(3.8147e-06, -112)
scale = Vector2(11.1458, 9.26042)
sprite_frames = SubResource("SpriteFrames_ddthx")
animation = &"spawn"
autoplay = "idle"

[node name="detectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionArea"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_qvqoo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -58)
shape = SubResource("CircleShape2D_apmrc")

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -2.33333)
collision_layer = 0
collision_mask = 4

[node name="hitboxShape" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, -60.3854)
shape = SubResource("RectangleShape2D_fwqr1")

[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_shape_exited" from="detectionArea" to="." method="_on_detection_area_body_shape_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
